@@ -1,10 +1,17 @@
-#  Default rules for rsyslog.
+# Autor: Robson Vaamonde
+# Site: www.procedimentosemti.com.br
+# Facebook: facebook.com/ProcedimentosEmTI
+# Facebook: facebook.com/BoraParaPratica
+# YouTube: youtube.com/BoraParaPratica
+# Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
+# Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
+# Data de criação: 20/01/2022
+# Data de atualização: 20/01/2022
+# Versão: 0.01
+# Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
+# Testado e homologado para a versão do Rsyslog v8.x
 #
-#			For more information see rsyslog.conf(5) and /etc/rsyslog.conf
-
-#
-# First some standard log files.  Log by facility.
-#
+# Configuração dos arquivos de Log padrão do Syslog/Rsyslog
 auth,authpriv.*			/var/log/auth.log
 *.*;auth,authpriv.none		-/var/log/syslog
 cron.*				/var/log/cron.log
@@ -13,18 +20,16 @@ kern.*				-/var/log/kern.log
 #lpr.*				-/var/log/lpr.log
 mail.*				-/var/log/mail.log
 user.*				-/var/log/user.log
-
 #
-# Logging for the mail system.  Split it up so that
-# it is easy to write scripts to parse these files.
-#
+# Configuração dos arquivos de Log do envio de Email do Sistema
 #mail.info			-/var/log/mail.info
 #mail.warn			-/var/log/mail.warn
 mail.err			/var/log/mail.err
-
 #
-# Some "catch-all" log files.
+# Emergências são enviadas para todos os logados.
+*.emerg				:omusrmsg:*
 #
+# Configurações avançadas do Syslog/Rsyslog (deixar desabilitado)
 #*.=debug;\
 #	auth,authpriv.none;\
 #	news.none;mail.none	-/var/log/debug
@@ -32,15 +37,6 @@ mail.err			/var/log/mail.err
 #	auth,authpriv.none;\
 #	cron,daemon.none;\
 #	mail,news.none		-/var/log/messages
-
-#
-# Emergencies are sent to everybody logged in.
-#
-*.emerg				:omusrmsg:*
-
-#
-# I like to have messages displayed on the console, but only on a virtual
-# console I usually leave idle.
 #
 #daemon,mail.*;\
 #	news.=crit;news.=err;news.=notice;\
